<resources>
    <!-- Screen Titles -->
    <string name="app_name">AMXSFamilyZone</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add_post">New Post</string>
    <string name="title_quick_links">Resources</string>
    <string name="title_profile">Profile</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_edit_post_description">Edit Post Text</string>

    <string name="register_headline">Sign Up</string>
    <string name="sign_in_headline">Sign In</string>
    <string name="forgot_password_headline">Forgot Password</string>
    <string name="resources_headline">Resources Finder</string>
    <string name="resources_subheader">Explore the array of resources provided by Military OneSource and various Defense Department initiatives to bolster operational preparedness and enrich daily living standards.</string>
    <string name="wing_families_header">Join the 317th Airlift Wing Families Group (Facebook)</string>
    <string name="base_spouses_header">Join the Dyess Spouses Group (Facebook)</string>
    <string name="crisis_info">* Orange border denotes crisis response resources</string>

    <!-- App Actions -->
    <string name="action_sign_out">Sign Out</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_change_profile_photo">Change profile photo</string>
    <string name="action_share_post">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_post">Edit Post</string>
    <string name="action_delete_post">Delete Post</string>
    <string name="action_post_options">Options</string>
    <string name="action_report_post">Report Post</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_search">Search for users</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_bookmark">Save</string>
    <string name="action_save_post_image">Save Image</string>

    <string name="password_reset_message">Email sent!</string>

    <!-- Image Content Descriptions -->
    <string name="sign_up_image_cd">Sign Up Image</string>
    <string name="user_post_image">User Images</string>
    <string name="dialog_image_cd">Dialog image view</string>
    <string name="user_profile_image">Profile Image</string>

    <string name="edit_user_header">Name:</string>
    <string name="edit_username_header">Username:</string>
    <string name="edit_bio_header">Biography:</string>
    <string name="edit_link_header">Add a Link</string>
    <string name="followers_header">Followers</string>
    <string name="following_header">Following</string>
    <string name="posts_header">Posts</string>
    <string name="trending_header">Trending Posts</string>
    <string name="trending_users_header">New Users</string>

    <string name="trending_title">Trending Title</string>
    <string name="trending_description">Trending Post Description</string>

    <!-- Text Hints -->
    <string name="name_hint">Name</string>
    <string name="user_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="bio_hint">Add Biography</string>
    <string name="link_hint">Add Link</string>

    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="reset_button_text">Reset Password</string>
    <string name="edit_profile_button_text">Edit Profile</string>
    <string name="save_profile_button_text">Save Changes</string>
    <string name="update_button_text">Update</string>

    <string name="login_text">Already have an account? Login</string>
    <string name="sign_up_welcome_text">Welcome to the 317th AMXS Family Zone! View upcoming information and connect with 317 AMXS family, both active duty and spouses.</string>
    <string name="sign_in_welcome_text">Welcome back! Sign in to continue</string>
    <string name="forgot_password_welcome_text">Please enter the email address used when signing up to receive a link to reset your password.</string>
    <string name="login_welcome_message">Welcome back, %1$s</string>
    <string name="login_failed_message">Sorry, login failed. Please try again. %1$s</string>
    <string name="register_success_message">Sign in successful!</string>

    <string name="opsec_disclaimer">Please remember OPSEC when posting!</string>

    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="post_image_cd">Post image placeholder</string>
    <string name="share_your_message">What\'s on Your Mind?</string>
    <string name="post_text">Write a caption</string>
    <string name="post">Post</string>

    <string name="placeholder_link">Placeholder</string>
    <string name="no_results_found_text">Nothing to see here yet. \nAdd a post to get started!</string>
    <string name="no_users_found_text">No users match your search. \n Please try again.</string>
    <string name="no_notifications_text">You currently have no notifications. \nWe will
notify you when something new happens!</string>
    <string name="no_posts_found">Nothing to see here</string>
    <string name="no_trending_posts_text">Looks like our trending topics have been grounded. \nWe\'re working on a quick fix.</string>
    
    <!-- Settings Fragment -->
    <string name="acknowledgement">Special Recognition and Appreciation</string>
    <string name="open_source">Open Source Libraries</string>
    <string name="help">Privacy Policy</string>
    <string name="feedback">Let us know how we can improve</string>
    <string name="connect">Connect with me on these platforms</string>
    <string name="change_theme">Change Theme</string>
    <string name="light_mode">Light theme</string>
    <string name="dark_mode">Dark theme</string>
    <string name="follow_system">Follow OS setting</string>
    <string name="pref_key_mode_night">PREF_MODE_NIGHT</string>

    <string name="version_header">Build Version </string>
    <string name="version_text">%1$s %2$s</string>
    <string name="account_created_text">Account Created: %1$s</string>
    <string name="follower_count_text">Followers: %1$s</string>
    <string name="posted_by_text">Posted By %1$s</string>

    <string name="linkedIn" translatable="false">https://www.linkedin.com/in/drewstephens/</string>
    <string name="reddit" translatable="false">https://www.reddit.com/r/AirForce/</string>
    <string name="instagram" translatable="false">https://www.instagram.com/drewstephensdesigns/</string>
    <string name="profile_post_empty_text">When you share photos they\'ll appear on your profile</string>
    <string name="report_text">Why are you reporting this post? \n\nYour report is anonymous and will not be shared with anyone. If someone is in immediate danger, call the local emergency services - don\'t wait.</string>
    <string name="empty_state_image">Empty state image view</string>
    <string name="thank_you">Thank you to the 317th AMXS Leadership and Key Spouse team for believing in me and allowing me an opportunity to follow my passion.</string>
    <string name="delete_account">Are you sure you want to delete your account? This action cannot be undone!</string>
    <string name="privacy_policy_url" translatable="false">https://drewstephensdesigns.github.io/privacy-policy/amxs-family-zone</string>
</resources>