<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_add_post"
        android:icon="@drawable/ic_edit_square"
        android:title="@string/title_add_post" />

    <item
        android:id="@+id/navigation_quick_links"
        android:icon="@drawable/ic_captive_portal"
        android:title="@string/title_quick_links" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/title_profile" />

</menu>