<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="?attr/actionBarSize"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appVersionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/theme"
            style="@style/AboutCard">
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/change_theme"
                android:drawableStart="@drawable/ic_change_theme"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/acknowledgement"
            style="@style/AboutCard">
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/acknowledgement"
                android:drawableStart="@drawable/ic_crowdsource"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/feedback"
            style="@style/AboutCard">
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/feedback"
                android:drawableStart="@drawable/ic_feedback"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/connect"
            style="@style/AboutCard">
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/connect"
                android:drawableStart="@drawable/ic_person"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/open_source"
            style="@style/AboutCard">
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/open_source"
                android:drawableStart="@drawable/ic_open_source"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/help"
            style="@style/AboutCard">
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/help"
                android:drawableStart="@drawable/ic_support"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/logout"
            style="@style/AboutCard">
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/action_sign_out"
                app:drawableTint="@color/charger_red"
                android:textColor="@color/charger_red"
                android:drawableStart="@drawable/ic_logout_account"/>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>