<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/opsec_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/opsec_disclaimer"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text"
        android:fontFamily="@font/allerta"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:textStyle="bold"
        android:textColor="?colorControlNormal" />

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/opsec_notice"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/post_image_cd"
        android:elevation="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_add_photo"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/share_your_message"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text"
        android:fontFamily="@font/alata"
        android:textStyle="bold"
        android:textColor="?colorControlNormal" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginBottom="12dp"
        android:background="@drawable/background_input"
        android:hint="@string/post_text"
        android:padding="16dp"
        android:fontFamily="@font/alata"
        android:textColorHint="?attr/colorControlNormal"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text"
        android:focusable="true"
        android:maxLines="5"
        android:elevation="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_text"
        android:layout_centerHorizontal="true"
        android:backgroundTint="?colorPrimaryContainer"
        android:textColor="?colorControlNormal"
        android:text="@string/post"
        android:textSize="16sp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp"
        android:elevation="2dp" />
</RelativeLayout>