<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/amxs"
                    app:civ_border_color="?colorControlNormal"
                    app:civ_border_width="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/changePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/action_change_profile_photo"
                    android:textColor="@color/eagle_blue"
                    android:layout_marginVertical="@dimen/activity_horizontal_margin"
                    app:layout_constraintTop_toBottomOf="@id/profileImage"
                    app:layout_constraintEnd_toEndOf="@id/profileImage"
                    app:layout_constraintStart_toStartOf="@id/profileImage" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:padding="5dp"
                        android:text="@string/edit_user_header"
                        android:textColor="?colorControlNormal"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEditname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="50dp"
                        android:background="@drawable/background_input"
                        android:gravity="center"
                        android:hint="@string/name_hint"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="?colorControlNormal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:padding="5dp"
                        android:text="@string/edit_bio_header"
                        android:textColor="?colorControlNormal"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEditBio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="50dp"
                        android:background="@drawable/background_input"
                        android:gravity="center"
                        android:hint="@string/bio_hint"
                        android:maxLines="4"
                        android:padding="5dp"
                        android:textColor="?colorControlNormal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:padding="5dp"
                        android:text="@string/edit_link_header"
                        android:textColor="?colorControlNormal"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEditLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="50dp"
                        android:background="@drawable/background_input"
                        android:gravity="center"
                        android:hint="@string/link_hint"
                        android:inputType="textWebEditText"
                        android:maxLength="30"
                        android:padding="5dp"
                        android:textColor="?colorControlNormal" />

                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/updateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="?colorPrimaryContainer"
                    android:text="@string/save_profile_button_text"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

    </LinearLayout>